# example-haskell-nix-flake

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example-haskell-nix-flake.cabal  flake.nix
.github/workflows/: ci.yaml
app/: Main.hs
