cabal-version:      3.0
name:               example-haskell-nix-flake
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dennis Gosnell
maintainer:         cdep.illabout@gmail.com
category:           Example
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable example-haskell-nix-flake
    -- Import common warning flags.
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.13.0.0
                    , attoparsec

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2021
